--- a/Twitter_Sentiment_Analysis.ipynb
+++ b/Twitter_Sentiment_Analysis.ipynb
@@ -34,10 +34,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ACCESS_TOKEN=\"802567534264389632-YaYdglNfenTBGmxTITX3SBDEPFlYzmT\"\n",
-    "ACCESS_TOKEN_SECRET=\"ajNgI7XALZwOjkwX3i1bud8QoZNVXPGbJ7lbMS1c15P0E\"\n",
-    "CONSUMER_KEY=\"iVDMrvc1G7UEczFtxN46Vo3n6\"\n",
-    "CONSUMER_SECRET=\"AEtF5hGcUQWKB68Q45WK3pNXJJ6kJ40U8IhMMCRr4krFj65IU4\""
+    "ACCESS_TOKEN=\"XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX\"\n",
+    "ACCESS_TOKEN_SECRET=\"XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXx\"\n",
+    "CONSUMER_KEY=\"XXXXXXXXXXXXXXXXXXXXXXXXXXX\"\n",
+    "CONSUMER_SECRET=\"XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX\""
    ]
   },
   {
